# SmartLogger

./: .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/saferecorder/: CMakeLists.txt  saferecorder.cpp  saferecorder.h
libraries/smartlogger/: CMakeLists.txt  smartlogger.cpp  smartlogger.h
src/: CMakeLists.txt  main.cpp
